Style adjustments for mobile version

--- a/src/app/settings/account/index.html
+++ b/src/app/settings/account/index.html
@@ -19,13 +19,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="fields">
-                    <div class="eight wide field">
-                        <label i18n="settings.account.email">Email</label>
-                        <input value.bind="user.email" type="email" name="information[email]" i18n="[placeholder]settings.account.email" placeholder="Email">
+                <div class="field">
+                    <div class="fields">
+                        <div class="eight wide field">
+                            <label i18n="settings.account.email">Email</label>
+                            <input value.bind="user.email" type="email" name="information[email]" i18n="[placeholder]settings.account.email" placeholder="Email">
+                        </div>
                     </div>
                 </div>
-                
+
                 <button class="ui primary primary-action button" i18n="[append]settings.save"><i class="save icon"></i></button>
             </div>
         </form>
