--- a/src/app/shared/components/nav-bar/nav-bar.html
+++ b/src/app/shared/components/nav-bar/nav-bar.html
@@ -4,9 +4,9 @@
             <div class="ui inverted secondary pointing menu" style="padding: 1em 0;">
                 <a route-href="route: alerts" class="item">
                     <img src="/images/pricewise-logo.png">
-                    <span style="padding-left: 1em;">PriceWise</span>
+                    <span class="mobile hidden" style="padding-left: 1em;">PriceWise</span>
                 </a>
-                
+
                 <div class="right icon menu">
                     <a class="item" click.delegate="changeLanguage()">
                         <span class="ui basic inverted icon button" i18n="otherLanguage">Language</span>
