--- a/src/app/alert/index.html
+++ b/src/app/alert/index.html
@@ -7,22 +7,46 @@
                 </a>
             </h2>
 
-            <img class="ui small inline image" src.bind="imageUrl" style="vertical-align: inherit;">
-            <span style="margin-left: 1em; display: inline-block;">
-                <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
-                    <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
-                    <textarea value.bind="title & updateTrigger:'blur'" class="input" rows="2"></textarea>
-                </h1>
+            <div class="ui two column mobile only grid">
+                <div class="six wide column">
+                    <img class="ui small inline image" src.bind="imageUrl">
+                </div>
+                <div class="ten wide column">
+                    <h1 style="display: inline;">${title}</h1>
+                </div>
+            </div>
 
-                <div class="ui mini form" style="margin: 0.7rem 0 2rem 3.67142857rem;">
-                    <div class="inline field">
-                        <div class="ui checkbox">
-                            <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
-                            <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this product</label>
+            <div class="ui one column mobile only grid">
+                <div class="column">
+                    <div class="ui form">
+                        <div class="inline field">
+                            <div class="ui checkbox">
+                                <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
+                                <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this product</label>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </span>
+            </div>
+
+            <div class="mobile hidden">
+                <img class="ui small inline image" src.bind="imageUrl" style="vertical-align: inherit;">
+                <span style="margin-left: 1em; display: inline-block;">
+                    <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
+                        <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
+                        <textarea value.bind="title & updateTrigger:'blur'" class="input" rows="2"></textarea>
+                    </h1>
+
+                    <div class="ui mini form" style="margin: 0.7rem 0 2rem 3.67142857rem;">
+                        <div class="inline field">
+                            <div class="ui checkbox">
+                                <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
+                                <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this product</label>
+                            </div>
+                        </div>
+                    </div>
+                </span>
+            </div>
 
             <div class="ui inverted secondary pointing text menu" style="margin-bottom: 0;">
                 <div repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''} item">
