--- a/src/app/settings/account/index.html
+++ b/src/app/settings/account/index.html
@@ -19,11 +19,24 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="field">
                     <div class="fields">
                         <div class="eight wide field">
                             <label i18n="settings.account.email">Email</label>
                             <input value.bind="user.email" type="email" name="information[email]" i18n="[placeholder]settings.account.email" placeholder="Email">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field">
+                    <div class="fields">
+                        <div class="four wide field">
+                            <label i18n="settings.account.correspondenceLanguage">Correspondence Language</label>
+                            <select class="ui dropdown" value.bind="user.settings.correspondenceLanguage">
+                                <option value="en" i18n="english">English</option>
+                                <option value="fr" i18n="french">French</option>
+                            </select>
                         </div>
                     </div>
                 </div>
