--- a/src/app/alert/sources/index.html
+++ b/src/app/alert/sources/index.html
@@ -2,14 +2,6 @@
     <require from="../../shared/components/add-source/add-source"></require>
 
     <div class="ui container">
-        <div class="ui big circular icon red mobile hidden button" click.delegate="addSource()"
-            style="position: absolute; top: calc(-1.3em); right: 20%;"
-            data-analytics-category="sources"
-            data-analytics-action="add"
-            data-analytics-label="top button">
-            <i class="plus icon"></i>
-        </div>
-
         <div class="ui one column grid">
             <div class="column">
                 <div class="ui icon large primary primary-action mobile only button" style="display: block; margin: 0;" click.delegate="addSource()"
@@ -24,63 +16,68 @@
 
         <div class="ui one column grid">
             <div class="column">
-                <table class="ui very basic padded unstackable table">
-                    <thead>
-                        <tr>
-                            <th i18n="alert.sources.source">Source</th>
-                            <th i18n="alert.sources.price">Price</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr repeat.for="entry of alert.entries | sort:'lastPrice'">
-                            <td class="collapsing">
-                                <div class="ui image header">
-                                    <a class="image" style="width: initial;" href.bind="entry.productUrl" target="_blank"
-                                        data-analytics-category="Outbound Link"
-                                        data-analytics-action="click"
-                                        data-analytics-label.bind="entry.originalUrl">
-                                        <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
-                                    </a>
-                                </div>
-                            </td>
-                            <td>
-                                <h4>
-                                    <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}</a>
-                                </h4>
-                            </td>
-                            <td class="collapsing">
-                                <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)"
-                                    data-analytics-category="sources"
-                                    data-analytics-action="remove">
-                                    <i class="icon remove"></i>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                    <tfoot class="full-width">
-                        <tr>
-                            <th colspan="3">
-                                <div class="ui relaxed items">
-                                    <div class="ui text menu">
-                                        <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.bestCurrentDeal.modifiedAt | rt}</div>
+                <div class="ui text container">
+                    <table class="ui very basic padded unstackable table">
+                        <tbody>
+                            <tr repeat.for="entry of alert.entries | sort:'lastPrice'">
+                                <td class="collapsing">
+                                    <div class="ui image header">
+                                        <a class="image" style="width: initial;" href.bind="entry.productUrl" target="_blank"
+                                            data-analytics-category="Outbound Link"
+                                            data-analytics-action="click"
+                                            data-analytics-label.bind="entry.originalUrl">
+                                            <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
+                                        </a>
                                     </div>
-                                </div>
-                            </th>
-                        </tr>
-                        <tr>
-                            <th colspan="3" style="border: none;">
-                                <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
-                                    i18n="[append]alert.sources.addOtherSource"
-                                    data-analytics-category="sources"
-                                    data-analytics-action="add"
-                                    data-analytics-label="list button">
-                                    <i class="icon plus"></i>
-                                </div>
-                            </th>
-                        </tr>
-                    </tfoot>
-                </table>
+                                </td>
+                                <td>
+                                    <h4>
+                                        <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}</a>
+                                    </h4>
+                                </td>
+                                <td class="collapsing">
+                                    <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)"
+                                        data-analytics-category="sources"
+                                        data-analytics-action="remove">
+                                        <i class="icon remove"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tfoot class="full-width">
+                            <tr>
+                                <th colspan="3">
+                                    <div class="ui relaxed items">
+                                        <div class="ui text menu">
+                                            <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.bestCurrentDeal.modifiedAt | rt}</div>
+                                        </div>
+                                    </div>
+                                </th>
+                            </tr>
+                            <tr class="mobile hidden">
+                                <th colspan="3" style="border: none;">
+                                    <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
+                                        i18n="[append]alert.sources.addOtherSource"
+                                        data-analytics-category="sources"
+                                        data-analytics-action="add"
+                                        data-analytics-label="list button">
+                                        <i class="icon plus"></i>
+                                    </div>
+                                </th>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="ui icon large primary primary-action mobile only button" style="display: block; margin: 0;" click.delegate="addSource()"
+                    i18n="[append]alert.sources.addOtherSource"
+                    data-analytics-category="sources"
+                    data-analytics-action="add"
+                    data-analytics-label="list button">
+                    <i class="plus icon"></i>
+                </div>
             </div>
 
             <div class="column">
