--- a/static/styles.css
+++ b/static/styles.css
@@ -14,9 +14,14 @@ body {
 .primary-action-hover:hover {
     color: #02776f !important;
 }
+.ui.button.primary-action {
+    background-color: #008179;
+    color: #fff;
+}
 .ui.primary.button.primary-action {
     background-color: #008179;
 }
+.ui.button.primary-action:hover,
 .ui.primary.button.primary-action:hover,
 .ui.primary.buttons .button.primary-action:hover {
     background-color: #02776f;
@@ -239,10 +244,19 @@ div.au-stagger {
     text-align: center;
 }
 
+.pricewise .alert-card {
+    border-radius: 2px;
+}
+
 .pricewise .ui.cards > .green.card,
 .pricewise .ui.green.card,
 .pricewise .ui.green.cards > .card {
     box-shadow: 0 0 0 1px #D4D4D5, 0 2px 0 0 #008179, 0 1px 3px 0 #D4D4D5;
+}
+.pricewise .ui.cards > .green.card:hover,
+.pricewise .ui.green.card:hover,
+.pricewise .ui.green.cards > .card:hover {
+    box-shadow: 0 0 0 1px #d4d4d5, 0 2px 4px 0 #008179, 0 2px 10px 0 rgba(34,36,38,.15);
 }
 
 .pricewise .ui.cards > .card img.avatar {
@@ -254,7 +268,12 @@ div.au-stagger {
 .pricewise .ui.link.cards .card:hover,
 .pricewise a.ui.card:hover {
     transform: none;
+    background: #f6f6f6;
 }
+.pricewise .ui.link.cards .card:hover > .image {
+    background: inherit;
+}
+
 .ui.inactive.card > .content > a.header,
 .ui.cards > .inactive.card > .content > a.header {
     color: rgba(0, 0, 0, 0.3);
@@ -341,6 +360,7 @@ div.au-stagger {
     opacity: 0.5;
     transition: opacity .1s ease;
 }
+.pricewise .ui.secondary.inverted.pointing.menu a.item.active,
 .pricewise .ui.secondary.inverted.pointing.menu a.item:hover {
     opacity: 1;
 }
