--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -66,7 +66,7 @@
                                 </a>
                             </div>
                         </div>
-                        <a class="ui mobile hidden card" click.delegate="addAlert()"
+                        <a class="ui mobile hidden add-alert card" click.delegate="addAlert()"
                             data-analytics-category="alerts"
                             data-analytics-action="add">
                             <div class="ui image" style="height: 100%;">
