--- a/src/app/settings/index.html
+++ b/src/app/settings/index.html
@@ -1,6 +1,15 @@
 <template>
     <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative; padding: 3em 0 0 0;">
+            <div class="ui inverted secondary pointing menu">
+                <a route-href="route: alerts;" class="item" style="padding-left: 0;">
+                    <h2 style="font-weight: 200;" i18n="[append]alert.title">
+                        <div class="basic circular ui icon inverted button">
+                            <i class="large inverted chevron left icon"></i>
+                        </div>
+                    </h2>
+                </a>
+            </div>
             <h1 class="ui header" style="color: white; font-size: 3rem; font-weight: 200;" i18n="settings.title">Settings</h1>
 
             <div class="ui inverted secondary pointing text menu" style="margin-bottom: 0;">
