--- a/src/app/shared/components/alert-card/alert-card.html
+++ b/src/app/shared/components/alert-card/alert-card.html
@@ -1,12 +1,8 @@
-<template bindable="alert" containerless>
+<template bindable="alert">
     <div class="alert-card ${alert.isActive ? 'green' : 'inactive'} card">
         <div class="content">
             <slot name="top-action"></slot>
             <a class="header" route-href="route: alert; params.bind: { alertId: alert.id }">${alert.title}</a>
-            <div class="meta">
-                <small show.bind="alert.isActive" i18n="[prepend]alert.bestDealUpdatedTime">${alert.bestCurrentDeal.modifiedAt | rt}</small>
-                <small hide.bind="alert.isActive" i18n="alert.deactivated">Deactivated</small>
-            </div>
         </div>
         <a route-href="route: alert; params.bind: { alertId: alert.id }" class="image">
             <img class="${alert.isPortaitSize ? 'portrait' : ''} ${alert.isLandscapeSize ? 'landscape' : ''}" src.bind="alert.imageUrl">
@@ -21,12 +17,7 @@
                 <img class="ui avatar image" src="/images/${alert.bestCurrentDeal.source.domain}-small.png">
                 ${alert.bestCurrentDeal.source.name}
             </a>
-            <a class="right floated primary-action-hover" click.delegate="activateAlert(alert)" hide.bind="alert.isActive"
-                i18n="[append]alert.activate"
-                data-analytics-category="alerts"
-                data-analytics-action="activate">
-                <i class="toggle on icon"></i>
-            </a>
+            <slot name="bottom-action"></slot>
         </div>
     </div>
 </template>
