--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -26,8 +26,9 @@
                 <div class="column">
                     <div class="ui icon large primary primary-action mobile only button" style="display: block; margin: 0;" click.delegate="addAlert()" show.bind="alerts.length"
                         i18n="[append]alerts.createAlert"
-                        data-analytics-category="alerts"
-                        data-analytics-action="add">
+                        data-analytics-category="Alerts"
+                        data-analytics-action="add"
+                        data-analytics-label="button">
                         <i class="plus icon"></i>
                     </div>
                 </div>
@@ -38,21 +39,22 @@
                         <alert-card repeat.for="alert of alerts | sort:'title'" alert.one-time="alert" style="border-radius: 2px;" containerless>
                             <div slot="top-action">
                                 <i class="right floated red circular button remove icon" click.delegate="removeAlert(alert)"
-                                    data-analytics-category="alerts"
+                                    data-analytics-category="Alerts"
                                     data-analytics-action="remove"></i>
                             </div>
                             <div slot="bottom-action">
                                 <a class="right floated primary-action-hover" click.delegate="activateAlert(alert)" hide.bind="alert.isActive"
                                     i18n="[append]alert.activate"
-                                    data-analytics-category="alerts"
+                                    data-analytics-category="Alerts"
                                     data-analytics-action="activate">
                                     <i class="toggle on icon"></i>
                                 </a>
                             </div>
                         </alert-card>
                         <a class="ui mobile hidden add-alert card" click.delegate="addAlert()"
-                            data-analytics-category="alerts"
-                            data-analytics-action="add">
+                            data-analytics-category="Alerts"
+                            data-analytics-action="add"
+                            data-analytics-label="card">
                             <div class="ui image" style="height: 100%;">
                                 <img src="/images/plus-icon.png"
                                     style="width: 160px; height: 160px; top: calc(50% - 80px); left: calc(50% - 80px); position: absolute;">
@@ -65,8 +67,9 @@
                 <div class="column">
                     <div class="ui icon large primary primary-action mobile only button" style="display: block; margin: 0;" click.delegate="addAlert()" show.bind="alerts.length"
                         i18n="[append]alerts.createAlert"
-                        data-analytics-category="alerts"
-                        data-analytics-action="add">
+                        data-analytics-category="Alerts"
+                        data-analytics-action="add"
+                        data-analytics-label="button">
                         <i class="plus icon"></i>
                     </div>
                 </div>
@@ -80,8 +83,9 @@
                 <div style="text-align: center;">
                     <div class="ui primary primary-action button" click.delegate="addAlert()"
                         i18n="[append]alerts.createAlert"
-                        data-analytics-category="alerts"
-                        data-analytics-action="add">
+                        data-analytics-category="Alerts"
+                        data-analytics-action="add"
+                        data-analytics-label="overlay">
                         <i class="plus icon"></i>
                     </div>
                 </div>
