--- a/src/app/alert/index.html
+++ b/src/app/alert/index.html
@@ -13,7 +13,7 @@
 
             <div class="ui two column mobile only grid">
                 <div class="six wide column">
-                    <img class="ui small inline image" src.bind="imageUrl">
+                    <img class="ui small inline image" src.one-time="imageUrl">
                 </div>
                 <div class="ten wide column">
                     <h1 style="display: inline;">${title}</h1>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="mobile hidden">
-                <img class="ui small inline image" src.bind="imageUrl" style="vertical-align: inherit;">
+                <img class="ui small inline image" src.one-time="imageUrl" style="vertical-align: inherit;">
                 <span style="margin-left: 1em; display: inline-block;">
                     <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
                         <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
