--- a/src/app/shared/components/alert-card/alert-card.html
+++ b/src/app/shared/components/alert-card/alert-card.html
@@ -3,6 +3,9 @@
         <div class="content">
             <slot name="top-action"></slot>
             <a class="header" route-href="route: alert; params.bind: { alertId: alert.id }">${alert.title}</a>
+            <div class="meta">
+                <small i18n="[prepend]alert.lastUpdatedTime">${alert.bestCurrentDeal.modifiedAt | rt}</small>
+            </div>
         </div>
         <a route-href="route: alert; params.bind: { alertId: alert.id }" class="image">
             <img class="${alert.isPortaitSize ? 'portrait' : ''} ${alert.isLandscapeSize ? 'landscape' : ''}" src.bind="alert.imageUrl">
