--- a/src/app/shared/components/add-source/add-source.html
+++ b/src/app/shared/components/add-source/add-source.html
@@ -23,7 +23,7 @@
                         <a href.bind="source.url" target="_blank"
                             data-analytics-category="Outbound Link"
                             data-analytics-action="click"
-                            data-analytics-label.bind="source.url">
+                            data-analytics-label="source">
                             <h2 class="ui icon header logo">
                                 <img class="ui icon image" src="/images/${source.domain}.png" alt.bind="source.name">
                             </h2>
