--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -70,7 +70,7 @@
 
         <div class="ui overlay" hide.bind="alerts.length">
             <div style="width: 100%; position: absolute; top: 50%; left: 0;">
-                <p style="text-align: center;" i18n="alerts.noAlert">You are not watching any product right now.</p>
+                <p style="text-align: center;" i18n="alerts.noAlert">You are not watching any products right now.</p>
                 <p style="text-align: center;" i18n="alerts.getStarted">Get started!</p>
                 <div style="text-align: center;">
                     <div class="ui primary primary-action button" click.delegate="addAlert()"
