Added pollyfill for i18n

--- a/index.ejs
+++ b/index.ejs
@@ -43,7 +43,7 @@
     <!-- Webpack Dev Server reload -->
     <script src="/webpack-dev-server.js"></script>
     <% } %>
-    <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en-CA,Intl.~locale.fr-CA"></script> -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en-CA,Intl.~locale.fr-CA"></script>
     <!-- <script src="//www.anrdoezrs.net/am/8408170/include/joined/am.js"></script> -->
   </body>
 </html>
