--- a/src/app/alert/sources/index.html
+++ b/src/app/alert/sources/index.html
@@ -1,5 +1,6 @@
 <template>
     <require from="../../shared/components/add-source/add-source"></require>
+    <require from="./components/alert-entry/source-entry"></require>
 
     <div class="ui container">
         <div class="ui one column grid">
@@ -19,43 +20,20 @@
                 <div class="ui text container">
                     <table class="ui very basic padded unstackable table">
                         <tbody>
-                            <tr repeat.for="entry of alert.entries | sort:'lastPrice'">
-                                <td class="collapsing">
-                                    <div class="ui image header">
-                                        <a class="image" style="width: initial;" href.bind="entry.productUrl" target="_blank"
-                                            data-analytics-category="Outbound Link"
-                                            data-analytics-action="click"
-                                            data-analytics-label="originalUrl">
-                                            <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
-                                        </a>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h4>
-                                        <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}</a>
-                                    </h4>
-                                </td>
-                                <td class="collapsing">
-                                    <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)"
-                                        data-analytics-category="Sources"
-                                        data-analytics-action="remove">
-                                        <i class="icon remove"></i>
-                                    </div>
-                                </td>
-                            </tr>
+                            <tr as-element="source-entry" repeat.for="entry of alert.entries | sort:'lastPrice'" entry.bind="entry" remove-entry.call="removeEntry(entry)" save.call="save()"></tr>
                         </tbody>
                         <tfoot class="full-width">
                             <tr>
                                 <th colspan="3">
                                     <div class="ui relaxed items">
                                         <div class="ui text menu">
-                                            <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.bestCurrentDeal.modifiedAt | rt}</div>
+                                            <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.modifiedAt | rt}</div>
                                         </div>
                                     </div>
                                 </th>
                             </tr>
                             <tr class="mobile hidden">
-                                <th colspan="3" style="border: none;">
+                                <th colspan="4" style="border: none;">
                                     <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
                                         i18n="[append]alert.sources.addOtherSource"
                                         data-analytics-category="Sources"
