--- a/static/styles.css
+++ b/static/styles.css
@@ -395,6 +395,15 @@ div.au-stagger {
     opacity: 1;
 }
 
+.pricewise .footer {
+    border-radius: 0;
+    margin-top: 2em;
+    padding: 4em 0em 4em 0em;
+}
+.pricewise .footer .list > .item {
+    color: rgba(255,255,255,.5);
+}
+
 #welcome .masthead.segment {
     min-height: 700px;
     padding: 1em 0em;
@@ -417,6 +426,10 @@ div.au-stagger {
 }
 #welcome .masthead .ui.menu .ui.button {
     margin-left: 1.5em;
+}
+#welcome .ui.divided.grid:not([class*="vertically divided"])>.column:nth-child(4n+1),
+#welcome .ui.divided.grid:not([class*="vertically divided"])>.row>.column:nth-child(4n+1) {
+    box-shadow: none;
 }
 
 #login {
