Adjustments on the source-entry component for mobile

--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div class="primary-light">
+    <div class="primary-light" style="padding-bottom: 2em;">
         <div class="ui container" show.bind="alerts.length">
             <div class="ui one column grid">
                 <div class="column">
