--- a/src/app/settings/index.html
+++ b/src/app/settings/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div class="primary-light" style="position: relative;">
+    <div class="primary-light" style="position: relative; padding-bottom: 2em;">
         <div class="ui padded basic segment">
             <router-view></router-view>
         </div>
