--- a/src/app/alert/sources/index.html
+++ b/src/app/alert/sources/index.html
@@ -24,7 +24,7 @@
                         </tbody>
                         <tfoot class="full-width">
                             <tr>
-                                <th colspan="3">
+                                <th>
                                     <div class="ui relaxed items">
                                         <div class="ui text menu">
                                             <div class="item" i18n="[prepend]alert.bestDealUpdatedTime">${alert.modifiedAt | rt}</div>
@@ -33,7 +33,7 @@
                                 </th>
                             </tr>
                             <tr class="mobile hidden">
-                                <th colspan="4" style="border: none;">
+                                <th style="border: none;">
                                     <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
                                         i18n="[append]alert.sources.addOtherSource"
                                         data-analytics-category="Sources"
