--- a/src/app/shared/components/add-source/add-source.html
+++ b/src/app/shared/components/add-source/add-source.html
@@ -1,12 +1,12 @@
 <template>
     <overlay>
-        <form submit.delegate="createSource()" role="form" class="ui large form ${className}">
+        <form submit.delegate="createSource()" role="form" class="ui large add-source form ${className}">
             <div class="ui one column center aligned grid">
-                <div class="column" style="max-width: 60%;">
+                <div class="title-column column">
                     <h3 i18n="sources.addSource">Browse your favourite shopping site and paste the product URL</h3>
                 </div>
-                <div class="column">
-                    <div class="ui large right action input">
+                <div class="input-column column">
+                    <div class="ui large right action input" style="width: 100%;">
                         <input value.bind="newAlertUrl" type="url" placeholder="Url" autofocus style="width: auto;">
                         <button class="ui primary primary-action button ${newAlertUrl.length ? '' : 'disabled'}" i18n="[append]sources.add">
                             <i class="add icon"></i>
